.kube/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statyes-client-svc
spec:
  selector:
    app: statyes-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
